2001-08-10	<mschimek@users.sf.net>

	* Managed to confuse Intel and AT&T syntax in motion.c only
	  newer 'as' would understand. Converted to AT&T.

2001-08-08	<mschimek@users.sf.net>

	* New mux context. (Wanted to replace output stuff but that
	  needs more preparation.)

2001-08-06	<mschimek@users.sf.net>

	* ffmpeg: crash due to cpuid bug, updated from ffmpeg cvs.
	* rte/b_mp1e: report audio frame count in audio only mode.
	* b_mp1e: increased audio buffer size to 8 * frame size (similar
	  to mp1e btw.), hope this gives better sync w/esd. Data is more
	  likely new when we read/stamp because encoding is much faster
	  than input, although still far from reliable synching.
	* rte: fixed a typo in destroy sequence causing hangs.
	* mp1e video: missing eof reply.

2001-08-01	<garetxe@users.sf.net>

	* ffmpeg/: Added ffmpeg backend, taken from ffmpeg cvs
	(http://ffmpeg.sf.net). Needs a lot of work, but most modes
	already encode.

2001-08-01	<mschimek@users.sf.net>

	* video/mpeg1.c: Fixed fifo eof handling.
	* Restored preview, preliminary.
	* Examined the 2001-06-07 bug, is a DC rounding problem,
	  not strictly a bug. Modified the quant calculation.
	  Lets see how that works, then optimize.
	* Restored v4l interface.

2001-07-31	<mschimek@users.sf.net>

	* Added optional input fifo wrapper to mp2 encoder.

2001-07-28	<mschimek@users.sf.net>

	* Converted remaining fifos to fifo2.

2001-07-27	<mschimek@users.sf.net>

	* Converted capture fifos to fifo2 in mp1e and rte.
	* Configure checks whether as supports SSE2.

2001-07-18	<mschimek@users.sf.net>

	* Rewrote bstream function
	* Several fixes and improvements in emu
	* Added SSE2 support

2001-07-13	<mschimek@users.sf.net>

	* Fixed video API detection
	* Oops, forgot to clean up SIGTERM

2001-07-12	<mschimek@users.sf.net>

	* Made emu work with pthreads (phew...)
	* Added SSE and 3DNow! support

2001-07-06	<mschimek@users.sf.net>

	* Made ioctls EINTR aware
	* Corrected a B quant typo (post 1.9pre1)