@@ -18,7 +18,7 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-/* $Id: vbi.h,v 1.32 2001-08-10 04:43:28 mschimek Exp $ */
+/* $Id: vbi.h,v 1.33 2001-08-12 18:36:45 mschimek Exp $ */
 
 #ifndef VBI_H
 #define VBI_H
@@ -113,6 +113,3 @@ vbi_send_event(struct vbi *vbi, vbi_event *ev)
 extern void		vbi_transp_colourmap(struct vbi *vbi, attr_rgba *d, attr_rgba *s, int entries);
 
 #endif /* VBI_H */
-
-
-
